--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
             <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="#">Profile</a>
+            <a class="nav-link active text-light" aria-current="page" href="{% url 'useraccount:profile_update' %}">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active text-light" aria-current="page" href="{% url 'blog:add_post' %}">Create</a>
