--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,24 +7,30 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand text-light" href="#">MDR BLOG</a>
+        <a class="navbar-brand text-light" href="{% url 'blog:index' %}">MDR BLOG</a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+            <a class="nav-link active text-light" aria-current="page" href="{% url 'blog:index' %}">Home</a>
           </li>
+          {% if request.user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link active text-light" aria-current="page" href="{% url 'useraccount:profile_update' %}">Profile</a>
           </li>
+         
           <li class="nav-item">
             <a class="nav-link active text-light" aria-current="page" href="{% url 'blog:add_post' %}">Create</a>
           </li>
+          {% endif %}
          
         </ul>
         <div class="d-flex" role="search">
-       
+            {% if not request.user.is_authenticated %}
           <a href="{% url 'useraccount:user_login' %}" class="btn btn-outline-light me-2" type="submit">LogIn</a>
           <a href="{% url 'useraccount:user_signup' %}" class="btn btn-outline-light me-2" type="submit">SignUp</a>
+            {% endif %}
+        {% if request.user.is_authenticated %}
           <a href="{% url 'useraccount:user_logout' %}" class="btn btn-outline-light me-2" type="submit">LogOut</a>
+          {% endif %}
         </div>
       </div>
     </div>
