--- a/useraccount/templates/login.html
+++ b/useraccount/templates/login.html
@@ -22,6 +22,10 @@
                     {{ form.as_p }}
                     <input type="submit" value="submit" class="btn btn-primary w-100">
                 </form>
+                <div class="text-center">
+                    <p><a href="{% url 'useraccount:user_signup' %}">New User? Register</a></p>
+                    <p><a href="{% url 'blog:index' %}">Home</a></p>
+                </div>
             </div>
         </div>
     </div>
