--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -62,7 +62,7 @@
 
 {{ block.super}}
 
-<script src="text/javascript">
+<script type="text/javascript">
   let modal = document.getElementById("deleteModal");
   modal.addEventListener("show.bs.modal", function(evt){
     let btn = evt.relatedTarget;
